# sales-protocol

./: .gitignore  MEME.md  Makefile  README.md  annotate_pipeline.go  annotate_pipeline_test.go  business_process_sgr.go  dialogs.db  go.mod  input_sales_transcripts.go  llm_cases_empathy.go  llm_cases_speaker.go  llm_openai_client.go  main.go  openai_cases_test.go  openai_client.go  pipeline.go  pipeline_annotate.go  pipeline_test.go  pyproject.toml  reporting.go  reporting_test.go  sgr_demo.py  sqlite_migration.go  sqlite_migration_test.go  sqlite_store.go  store_sqlite.go  types.go
artifacts/: metrics.md  sgr_cases_latest_run.csv
csv/: modamart__0_transcript.csv  modamart__1_transcript.csv  modamart__2_transcript.csv  modamart__3_transcript.csv  modamart__4_transcript.csv  modamart__5_transcript.csv  modamart__6_transcript.csv  modamart__7_transcript.csv  modamart__8_transcript.csv  modamart__9_transcript.csv  nexiv-solutions__0_transcript.csv  nexiv-solutions__1_transcript.csv  nexiv-solutions__2_transcript.csv  nexiv-solutions__3_transcript.csv  nexiv-solutions__4_transcript.csv  nexiv-solutions__5_transcript.csv  nexiv-solutions__6_transcript.csv  nexiv-solutions__7_transcript.csv  nexiv-solutions__8_transcript.csv  nexiv-solutions__9_transcript.csv  terravista-properties__0_transcript.csv  terravista-properties__1_transcript.csv  terravista-properties__2_transcript.csv  terravista-properties__3_transcript.csv  terravista-properties__4_transcript.csv  terravista-properties__5_transcript.csv  terravista-properties__6_transcript.csv  verity-capital__0_transcript.csv  (+22 more)
(+61 files in other folders)
