[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dialogs-sgr"
version = "0.1.0"
description = "Python-only SGR platform for dialog quality with SQLite and tiny CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "openai>=1.58.0",
  "pydantic>=2.9.0",
  "typer>=0.12.5",
  "pandas>=2.2.0",
  "matplotlib>=3.9.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "jupyter>=1.1.1",
  "ipykernel>=6.29.5",
]

[project.scripts]
dialogs = "dialogs.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
